1.3.4 (Pending)

1.3.3 (2008-10-08)
* Added:  JtestR support. Implemented pending jtestr specs.
* Added:  Growl notifications (OS X only).
* Added:  error, info and trace methods.
* Added:  Release task support for alternative SVN repository layout
          (e.g., http://my.repo.org/trunk/foo).
* Added:  BUILDR-128 Emma support
* Added:  BUILDR-135. Extracted reusable replacement logic into Filter::Mapper
* Added:  BUILDR-148 It is now possible to set the version of various 3rd
          party libraries from the build.yml file.  Supported libraries
          include Ant and the various test and BDD frameworks.
* Change: Error reporting now shows 'buildr aborted!' (used to say rake),
          more of the stack trace without running --trace, and when running
          with supported terminal, error message is red.
* Change: Eclipse task updated to documented Scala plugin requirements
          (http://www.scala-lang.org/node/94)
* Change: Buildr.application.buildfile returns a task instead of a String.
* Change: BUILDR-104 Buildr::group has :under and :version, but not :type.
          Now it has :type too (Lacton).
* Change: BUILDR-139 Incremental test run.
* Change: BUILDR-141 Removed NEXT_VERSION from release task.
* Change: BUILDR-148 ant-junit no longer included in root classpath, but
          specified during taskdef.
* Change: BUILDR-153 To customize the SVN tag used by the release task, set
          Release.tag_name to either the tag value or a proc that takes the
          version number and return the desired tag.
* Fixed:  Should not display "(in `pwd`, development)" when using --quiet.
* Fixed:  Release task's regexp to find either THIS_VERSION and VERSION_NUMBER.
* Fixed:  BUILDR-106 download(artifact(...)=>url) broken in certain cases
          (Lacton).
* Fixed:  BUILDR-108 Trace to explain why a compile is done (Lacton).
* Fixed:  BUILDR-109 Failure of "Buildr::Filter should respond to :include and
          use these inclusion patterns" (Lacton).