@@ -20,6 +20,7 @@ end
 require 'buildr/core'
 require 'buildr/packaging'
 require 'buildr/java'
+require 'buildr/scala'
 require 'buildr/ide'
 
 # Methods defined in Buildr are both instance methods (e.g. when included in Project)
