@@ -1,4 +1,5 @@
 1.3.4 (Pending)
+* Fixed:  BUILDR-172 Scala compiler not loaded by default.
 
 1.3.3 (2008-10-08)
 * Added:  JtestR support. Implemented pending jtestr specs.
